[package]
name = "cosmic-term"
version = "1.0.5"
authors = ["Jeremy Soller <jeremy@system76.com>", "Karan <https://github.com/lkaranl>"]
edition = "2024"
repository = "https://github.com/lkaranl/cosmic-mac-term"
license = "GPL-3.0-only"
rust-version = "1.85"

[dependencies]
alacritty_terminal = "0.25.1"
hex_color = { version = "3", features = ["serde"] }
indexmap = "2"
log = "0.4"
open = "5.3.2"
palette = { version = "0.7", features = ["serde"] }
paste = "1.0"
ron = "0.11"
serde = { version = "1", features = ["serde_derive"] }
shlex = "1"
tokio = { version = "1", features = ["sync"] }
# CLI arguments
clap_lex = "0.7"
# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
icu = { version = "2.1.1", features = ["compiled_data"] }
rust-embed = "8"
url = "2.5"
secret-service = { version = "5.1.0", features = [
    "rt-tokio-crypto-rust",
], optional = true }
thiserror = { version = "2.0", optional = true }
secstr = { version = "0.5", optional = true }

[dependencies.cosmic-files]
# git = "https://github.com/pop-os/cosmic-files.git"
path = "vendor/cosmic-files"
default-features = false

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
features = ["monospace_fallback", "shape-run-cache"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
#TODO: a11y feature crashes file chooser dialog
features = ["about", "multi-window", "tokio", "winit", "surface-message"]

[target.'cfg(unix)'.dependencies]
fork = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
# macOS: use apenas "wgpu" (default)
# Linux: adicione "wayland,dbus-config,password_manager"
default = ["wgpu"]
dbus-config = ["libcosmic/dbus-config"]
wgpu = ["libcosmic/wgpu", "cosmic-files/wgpu"]
wayland = ["libcosmic/wayland", "cosmic-files/wayland"]
# password_manager requer secret-service (D-Bus) - não disponível no macOS
password_manager = ["secret-service", "thiserror", "secstr"]

[profile.release-with-debug]
inherits = "release"
debug = true


# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
