[package]
name = "cosmic-term"
version = "1.3.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.93"

[dependencies]
alacritty_terminal = "0.25.1"
hex_color = { version = "3", features = ["serde"] }
indexmap = "2"
log = "0.4"
open = "5.3.2"
paste = "1.0"
regex = "1"
ron = "0.11"
serde = { version = "1", features = ["serde_derive"] }
shlex = "1"
tokio = { version = "1", features = ["sync"] }
# CLI arguments
clap_lex = "0.7"
# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
icu = { version = "2.1.1", features = ["compiled_data"] }
rust-embed = "8"
url = "2.5"
secret-service = { version = "5.1.0", features = [
    "rt-tokio-crypto-rust",
], optional = true }
thiserror = { version = "2.0", optional = true }
secstr = { version = "0.5", optional = true }

[dependencies.cosmic-files]
git = "https://github.com/pop-os/cosmic-files.git"
default-features = false

[dependencies.cosmic-text]
version = "0.19"
features = ["monospace_fallback", "shape-run-cache"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
#TODO: a11y feature crashes file chooser dialog
features = [
    "about",
    "autosize",
    "multi-window",
    "tokio",
    "winit",
    "surface-message",
]

[target.'cfg(unix)'.dependencies]
fork = "0.4"

[build-dependencies]
xdgen = "0.1"

[features]
default = ["dbus-config", "wgpu", "wayland", "password_manager"]
dbus-config = ["libcosmic/dbus-config"]
wgpu = ["libcosmic/wgpu", "cosmic-files/wgpu"]
wayland = ["libcosmic/wayland", "cosmic-files/wayland"]
password_manager = ["secret-service", "thiserror", "secstr"]

[profile.release-with-debug]
inherits = "release"
debug = true


[patch.'https://github.com/pop-os/libcosmic']
iced = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_futures = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_core = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_runtime = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_renderer = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_widget = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_accessibility = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_tiny_skia = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_winit = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
iced_wgpu = { git = "https://github.com/pop-os/iced", branch = "wayland-rs" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "wayland-rs" }
# cosmic-theme = { git = "https://github.com/pop-os/libcosmic//", branch = "wayland-rs" }

[patch.crates-io]
wayland-sys = { git = "https://github.com/smithay/wayland-rs" }
wayland-backend = { git = "https://github.com/smithay/wayland-rs" }
wayland-server = { git = "https://github.com/smithay/wayland-rs" }
wayland-scanner = { git = "https://github.com/smithay/wayland-rs" }
wayland-client = { git = "https://github.com/smithay/wayland-rs" }
wayland-protocols = { git = "https://github.com/smithay/wayland-rs" }
wayland-protocols-wlr = { git = "https://github.com/smithay/wayland-rs" }
wayland-cursor = { git = "https://github.com/smithay/wayland-rs" }
smithay-client-toolkit = { git = "https://github.com/ids1024/client-toolkit", branch = "wayland-update" }
sctk-adwaita = { git = "https://github.com/ids1024/sctk-adwaita", branch = "dispatch2" }

[patch."https://github.com/pop-os/winit.git"]
winit = { git = "https://github.com/ids1024/winit", branch = "dispatch2-cosmic" }
winit-core = { git = "https://github.com/ids1024/winit", branch = "dispatch2-cosmic" }

[patch."https://github.com/pop-os/smithay-clipboard"]
smithay-clipboard = { git = "https://github.com/ids1024/smithay-clipboard", branch = "wayland-rs-update-pop" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "wayland-rs" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "wayland-rs" }
